Fixed UI Issues
Fixed issue with volunteer hours being squeezed

Also fixed the menu running off screen on smaller screens like laptop

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,13 +12,8 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
-nav {
+.navbar {
   background-color: #112866;
-}
-.navbar-nav {
-  margin-left: auto;
-  margin-right: auto;
-  transform: translateX(50%); /* adjust % until it feels right */
 }
 .koc-card {
   background-color: #112866 !important;
